# 2024-06-03

./: CMakeLists.txt  README.rst
livecoding/: CMakeLists.txt  auto-ptr.cpp  lambda.cpp  lvalues-rvalues.cpp  map.cpp  new-cpp.cpp  ptr-decay.cpp  raw-ptr.cpp  string-move.cpp  thread-easy.cpp  timestamps.cpp
livecoding/smart-pointers/: CMakeLists.txt  sensor-unique-ptr.cpp  unique-ptr.cpp  weak-ptr.cpp
livecoding/threads/: CMakeLists.txt  join-vs-detach.cpp  mother-of-race-conditions--atomic.cpp  mother-of-race-conditions--mutex.cpp  mother-of-race-conditions.cpp  promise-future.cpp  thread-safe-queue.cpp
programs/: CMakeLists.txt  latch-demo.cpp  message-queue-demo.cpp  read-random-sensor.cpp
tests/: CMakeLists.txt  latch-suite.cpp  message-queue-suite.cpp  mt-queue-suite.cpp  sensor-config-maybe-mt-safe.cpp  sensor-config-suite.cpp  sensor-const-suite.cpp  sensor-random-suite.cpp  suite-demo.cpp  worker-suite.cpp
toolcase/: CMakeLists.txt  message-queue.h  my-latch.h  queue.h  sensor-config.cpp  sensor-config.h  worker-thread.h
