CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(2024-06-03)

FIND_PACKAGE(Threads REQUIRED)

SET(CMAKE_CXX_STANDARD 20)

if (${CMAKE_COMPILER_IS_GNUCC})
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g3 -Wall -Werror")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g3 -Wall -Werror")
endif()

ADD_SUBDIRECTORY(toolcase)
ADD_SUBDIRECTORY(programs)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(livecoding)
ADD_SUBDIRECTORY(googletest)
