ADD_EXECUTABLE(join-vs-detach join-vs-detach.cpp)
ADD_EXECUTABLE(mother-of-race-conditions mother-of-race-conditions.cpp)
ADD_EXECUTABLE(mother-of-race-conditions--atomic mother-of-race-conditions--atomic.cpp)
ADD_EXECUTABLE(mother-of-race-conditions--mutex mother-of-race-conditions--mutex.cpp)
ADD_EXECUTABLE(promise-future promise-future.cpp)
ADD_EXECUTABLE(thread-safe-queue thread-safe-queue.cpp)
